--- a/css/master.css
+++ b/css/master.css
@@ -1,3 +1,12 @@
+.wrap80 {
+width: 80%;
+margin: 0 auto;
+}
+.wrap70 {
+width: 70%;
+margin: 0 auto;
+}
+
 
 .header_top {
 position: fixed;
@@ -6,289 +15,232 @@ left: 0;
 z-index: 3;
 width: 100%;
 }
-button {
-transform:translateY(-25%);
-}
-.wrap_80 {
-width: 80%;
-margin: 0 auto;
-padding-top:5px;
-}
-.wrapper90 {
-width: 90%;
-margin: 0 auto;
-}
-}
-#bottone {
-border: 1px solid dodgerblue;
-color:dodgerblue;
-}
-.collapse .spostato {
-margin-left:10%;
+.navbar {
+background-color: white;
 }
 .logo {
-width:200px;
-margin-left:9vw;
+width: 200px;
+height:3vh;
 }
 .logo img {
+background: red;
 width: 100%;
+}
+.spostato {
+margin-top: 1vh;
+}
+.navbar-right {
+margin-top: 1vh;
+}
+#bottone {
 transform: translateY(-25%);
+border: 1px solid dodgerblue;
 }
-.dest {
-margin-right: 10%;
-}
-.navbar-default {
-background-color: white;
-}
-.header_bottom {
-height: 60vh;
-margin-top: 10vh;
-background-image:url(../img/jumbo.svg);
-background-repeat: no-repeat;
-background-size:cover;
-}
-/* fine header top  */
+/* fine navbar  */
 /* inizio jumbotron */
-.testopricipale h1, p {
-color: white;
-margin-left: 15%;
+.jumbo {
+background-image: url(../img/jumbo.svg);
+background-repeat: no-repeat;
+background-size: cover;
+margin-top: 11.5vh;
+}
+.jumbo_left h1, .jumbo_left p {
 padding-top: 5%;
-margin-top: 5%;
+color: white;
 }
 .formi {
-background-color: white;
-padding-left:2%;
-padding-right:2%;
+padding-bottom: 3%;
 border-radius: 2%;
-margin-left: 10%;
-margin-top:  7%;
-height: 53vh;
-width: 60%;
+background-color: white;
+margin-top: 1%;
+margin-bottom: 1%;
+padding-bottom: 3%;
+padding-left: 3%;
+padding-right: 3%;
+
 }
-.login {
-color:#2d2d2d;
-font-size: 1.6em;
+
+.googlelogo, .googlelogo img {
+float: left;
+width: 30px;
+height:30px;
 }
 #createaccount {
-background-color: dodgerblue;
-width:100%;
-}
-.googlelogo {
-float: left;
-display: inline-block;
-width: 30px;
-height: 30px;
-}
-.googlelogo img {
+
 width: 100%;
-margin-top: 8px;
 }
-.sgoogle h4 {
-padding-left: 10%;
-padding-right: 10%;
-padding-top: 1%;
-padding-bottom: 1%;
-margin-left: 10%;
-float: left;
-border:1px solid lightgrey;
-border-radius:3px;
-background-color: white;
-font-size: 1.6em;
-color: #2d2d2d;
+.sgoogle {
+border: azure;
+transform: translateY(15%);
+margin-left: 20%;
+background-color: dodgerblue;
+width: 60%;
+text-align:center;
 }
 .sgoogle a {
+color: white;
 text-decoration: none;
 }
-/* fine parte di jumbotron */
-/* .soci */
-.box_soci {
-width: 100%;
-height: 30vh;
+/* fine jumbotron  */
+
+/* inizio sezione main partner */
+.main_partner {
 background-color: #f8f8f8;
 }
-.costumer {
-background-color: #f8f8f8;
-}
-.box {
-width: 200px;
-height: 90px;
-margin-left: 20px;
-}
-.costumer a {
-text-decoration: none;
-}
-/* fine sezione soci o sponsor  */
+/* fine main partner */
 /* inizio deploy */
-.deploy-testo {
-margin-top: 4%;
-width: 100%;
-height: 20vh;
+.menu_deploy ul li {
+list-style: none;
+border-left: 1px solid grey;
+padding-top: 1vh;
+font-size: 1.5em;
+font-weight: 600;
+}
+.menu_deploy ul li a {
+text-decoration: none;
 }
 .deploy {
-height: 65vh;
+margin-top: 1%;
 }
-.top  {
-  height:30vh;
+.deploy_menu {
+margin-top: 5%;
 }
-.bottom {
-height: 30vh;
-}
+/* fine sezione deploy  */
 
-.menudeploy {
-border-left:1px solid grey;
-height: 8vh;
-margin-top: 0;
-margin-bottom:-3vh;
-margin-left: 20%;
+/* inizio sezione designed for developer  */
+.container_designer {
+margin-top: 3%;
+background-color: #f8f8f8;
 }
-.menudeploy H5 {
-font-weight: bold;
+.container_designer h2 {
+color: blue;
+font-weight: 600;
 }
-.menudeploy:nth-last-child(1) {
-  height: 4vh;
-}
-.menudeploy a {
-text-decoration:none;
-}
-.testodeploy h4 {
-color: darkblue;
-font-size: 2em;
-}
-.testodeploy h6 {
-font-size: 1.3em;
-padding-bottom: 2vh;
-}
-
-/* FINE SEZIONE DEPLOY */
-
-/* INIZIO SEZIONE DESIGNED FOR DEVELOPER  */
-.DESIGNED_FOR_DEV {
-width: 100%;
-background-color: #efefef;
-height: 95VH;
-}
-.dev h2 {
-color: darkblue;
-font-size: 3.5em;
-font-weight: bold;
-}
-.dev span {
-font-size: 1.7em;
-}
-
-.imgdev img {
+.imgdeploy img {
 width: 100%;
 }
 .chevron {
-margin-top: 18%;
+margin-top: 50%;
 font-size: 3em;
 }
-
-.circle i {
-color: blue ;
-font-size: 1.5em;
-margin-left:3px;
+.chevron_grey  a{
+color: grey;
 }
 .circle i:hover {
-background:darkblue;
+background-color:lightblue;
 border-radius: 50%;
 }
+/* fine sezione deploy */
 
-/* fine for developer  */
 
-
-/* inizio business features */
-.features {
-margin-top: 9vh;
-height: 50vh;
-}
-
+/* inizio features */
 .features h2 {
-color: darkblue;
-font-weight: 700;
+color: blue;
+margin-top: 2%;
 }
-.centrale h4 {
-color: darkblue;
-font-weight: 600;
+.boxfeatures {
+padding-top: 2%;
 }
-.centrale span {
-font-size: 1.3em;
+.boxfeatures a {
+text-decoration: none;
 }
-.centrale a {
-font-weight: 600;
-text-decoration:none;
-}
-/* fine sezione business features */
-/* inizio dodici regions  */
+/* fine sezione features  */
+
+
+/* inizio sezione tabella blu */
 .dodici_region {
-height: 50vh;
+color: white;
 background-color: #001fe2;
-}
-.dodici_region h2 {
-  color: white;
-  margin-top: 2%;
-  font-weight:500;
 }
 .dodici_left hr, .dodici_right hr {
 width:99%;
 margin-right: 7%;
 }
-.dodici_region {
-color: white;
+.dodici_region h2 {
+margin-top: 2%;
 }
-.dodici_region a {
-color: cyan;
-text-decoration: none;
+.tabella {
+margin-top: 2%;
 }
-/* fine dodici regions */
+/* fine sezione tabella blu  */
 
-/* inizio roketbox */
-.roketbox {
-height:70vh;
-
-background-color:#efefef;
-}
-.posizione2 {
-background-color: white;
-height: 70vh;
-}
+/* inizio sezione roketbox */
 .roket h2 {
-color: darkblue;
-letter-spacing: 3px;
-font-size: 6em;
+margin-bottom: 3%;
 }
-#testo h3 {
-font-size: 3em;
+.roketimg img {
+padding-left: 4%;
+padding-right: 4%;
 }
-.read a {
-text-decoration: none;
-font-size: 1.4em;
-font-weight: 500;
+.roketimg {
+border-radius: 2%;
+background: white;
+padding-left: 2%;
+padding-right: 2%;
+padding-top: 2%;
+padding-bottom: 2%;
 }
-.sub  {
-color:black;
+.circlerok {
+margin-top: 3%;
 }
-.circolo {
-margin-top: 2vh;
-}
-/* fine rocketbox */
+/* fine sezione roketbox */
+
+/* sezione footer get started */
 .prefooter {
-height: 30vh;
-background-color:#001fe2;
-}
-.prefooter h2 {
-margin-top: 7vh;
 color: white;
-font-weight:600;
+background:#001fe2;
+height:30vh;
 }
-#account {
-margin-top: 5vh;
-color: dodgerblue;
+.get h2 {
+margin-top: 5%;
+}
+.account button {
+width: 200px;
 background-color: white;
-padding: 15px 15px;
 }
-#account a {
+.account button a {
+color:#001fe2 ;
+font-weight: 600;
 text-decoration: none;
-color:  dodgerblue;
+}
+
+/* fine sezione getstarted */
+
+/* inizio sezione footer */
+.footer {
+position: relative;
+padding-top: 3%;
+color: white;
+background-color: darkblue;
+}
+ #one {
+  margin-top: 2%;
+color: grey;
+}
+.social i {
+font-size: 2.5em;
+color: darkgrey;
+}
+.shark {
+  position: absolute;
+position: fixed;
+bottom: 1%;
+right:3%;
+z-index: 4;
+background-color: blue;
+border-radius: 5px;
+width: 80px;
+height: 70px;
+border:2px solid white;
+margin-top: 13%;
 
 }
+.shark img {
+width: 60px;
+height: 50px;
+}
+.footer ul li {
+list-style: none;
+
+}
+/* fine sezione footer */
